[project]
name = "gridguard"
version = "0.1.0"
description = "AI demand scenario simulation for U.S. power grid resilience"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    "requests>=2.31",
    "ipykernel>=6.0",
]

[tool.uv]
# PyTorch with ROCm is pre-installed system-wide — inherit via --system-site-packages venv
# Do not add torch here; it comes from /usr/lib/python3/dist-packages

[tool.uv.sources]
# No special sources needed — system Python already has torch 2.10 ROCm

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
